--- a/src/app/features/division/division-registration/division-registration.component.html
+++ b/src/app/features/division/division-registration/division-registration.component.html
@@ -12,7 +12,6 @@
             placeholder="Nome"
             type="text"
             formControlName="name"
-            [(ngModel)]="division.name"
             maxlength="150"
             required
           />
@@ -25,8 +24,7 @@
           <mat-select
             formControlName="commandId"
             placeholder="Selecione o comando"
-            (selectionChange)="getRegionals(); division.regionalId = 0"
-            [(ngModel)]="selectedCommandId"
+            (selectionChange)="onCommandChange()"
             required
           >
             <mat-option *ngFor="let command of commands" [value]="command.id">
@@ -39,7 +37,7 @@
       <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
         <mat-form-field [fxFlex]="50">
           <mat-label>Regional </mat-label>
-          <mat-select formControlName="regionalId" [(ngModel)]="division.regionalId" required>
+          <mat-select formControlName="regionalId" required>
             <mat-option *ngFor="let regional of regionals" [value]="regional.id">{{ regional.name }}</mat-option>
           </mat-select>
           <mat-error *ngIf="formGroup.controls['regionalId'].invalid">Campo obrigatório</mat-error>
