Títulos mais próximos na tela de relatório graduação

--- a/src/app/features/report/graduation-report/graduation-report.component.css
+++ b/src/app/features/report/graduation-report/graduation-report.component.css
@@ -4,7 +4,6 @@
 
 /* Header */
 .header-section {
-  margin-bottom: 24px;
   padding: 20px;
 }
 
@@ -845,4 +844,8 @@
   .event-type-card {
     min-width: 100%;
   }
+}
+
+mat-card-header {
+  padding-top: 0%;
 }
