--- a/src/app/shared/layout/layout.component.css
+++ b/src/app/shared/layout/layout.component.css
@@ -9,6 +9,13 @@
 .navbar-brand {
   text-decoration: none;
   color: white;
+  display: flex;
+  align-items: center;
+}
+
+.toolbar-logo {
+  height: 40px;
+  width: auto;
 }
 
 .navbar-container {
