--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -6,7 +6,7 @@
     </button>
 
     <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
-      <h1>18 Admin</h1>
+      <img src="assets/mat-toolbar.png" alt="18 Admin" class="toolbar-logo">
     </a>
 
     <span class="navbar-spacer"></span>
@@ -48,8 +48,6 @@
       class="sidenav"
     >
       <mat-nav-list>
-        <h3 mat-subheader>Home</h3>
-
         <a [role]="['admin']" mat-list-item [routerLink]="['/user']" routerLinkActive="active">
           <mat-icon matListItemIcon>group</mat-icon>
           <span matListItemTitle>Usuários</span>
