--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -11,18 +11,6 @@
 
     <span class="navbar-spacer"></span>
 
-    <!-- <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
-      <mat-icon matBadge="2" matBadgeColor="accent">notifications</mat-icon>
-    </button>
-    <mat-menu #notificationMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
-      <a mat-menu-item>
-        <span>You have new tasks</span>
-      </a>
-      <a mat-menu-item>
-        <span>You have a new message</span>
-      </a>
-    </mat-menu> -->
-
     <button mat-button [matMenuTriggerFor]="userMenu">
       <mat-icon>person</mat-icon>
       <span fxShow fxHide.xs>
@@ -32,13 +20,12 @@
     <mat-menu #userMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
       <a mat-menu-item [routerLink]="['/auth/login']">
         <mat-icon>exit_to_app</mat-icon>
-        <span>Log out</span>
+        <span>Sair</span>
       </a>
     </mat-menu>
   </mat-toolbar>
 
   <mat-sidenav-container class="navbar-sidenav-container">
-    <!-- Side nav -->
     <mat-sidenav
       #snav
       [opened]="!mobileQuery.matches"
