cor primary no slide toggle do login

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -26,7 +26,7 @@
           </mat-error>
         </mat-form-field>
         <div class="full-width">
-          <mat-slide-toggle formControlName="rememberMe">Lembrar meu endereço de e-mail</mat-slide-toggle>
+          <mat-slide-toggle formControlName="rememberMe" color="primary">Lembrar meu endereço de e-mail</mat-slide-toggle>
         </div>
       </mat-card-content>
       <mat-card-actions class="login-actions">
