--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -35,47 +35,47 @@
       class="sidenav"
     >
       <mat-nav-list>
-        <a [role]="['admin']" mat-list-item [routerLink]="['/user']" routerLinkActive="active">
+        <a [role]="['admin']" mat-list-item (click)="closeSidenavAndNavigate('/user')" routerLinkActive="active">
           <mat-icon matListItemIcon>group</mat-icon>
           <span matListItemTitle>Usuários</span>
         </a>
 
-        <a mat-list-item [routerLink]="['/social-action']" routerLinkActive="active">
+        <a mat-list-item (click)="closeSidenavAndNavigate('/social-action')" routerLinkActive="active">
           <mat-icon matListItemIcon>diversity_3</mat-icon>
           <span matListItemTitle>Ações Sociais</span>
         </a>
 
-        <a mat-list-item [routerLink]="['/event']" routerLinkActive="active">
+        <a mat-list-item (click)="closeSidenavAndNavigate('/event')" routerLinkActive="active">
           <mat-icon matListItemIcon>event</mat-icon>
           <span matListItemTitle>Eventos</span>
         </a>
 
-        <a mat-list-item [routerLink]="['/poll']" routerLinkActive="active">
+        <a mat-list-item (click)="closeSidenavAndNavigate('/poll')" routerLinkActive="active">
           <mat-icon matListItemIcon>poll</mat-icon>
           <span matListItemTitle>Enquetes</span>
         </a>
 
-        <a [role]="['admin']" mat-list-item [routerLink]="['/regional']" routerLinkActive="active">
+        <a [role]="['admin']" mat-list-item (click)="closeSidenavAndNavigate('/regional')" routerLinkActive="active">
           <mat-icon matListItemIcon>apps</mat-icon>
           <span matListItemTitle>Regionais</span>
         </a>
 
-        <a [role]="['admin']" mat-list-item [routerLink]="['/division']" routerLinkActive="active">
+        <a [role]="['admin']" mat-list-item (click)="closeSidenavAndNavigate('/division')" routerLinkActive="active">
           <mat-icon matListItemIcon>safety_divider</mat-icon>
           <span matListItemTitle>Divisões</span>
         </a>
 
-        <a mat-list-item [routerLink]="['/person']" routerLinkActive="active">
+        <a mat-list-item (click)="closeSidenavAndNavigate('/person')" routerLinkActive="active">
           <mat-icon matListItemIcon>group</mat-icon>
           <span matListItemTitle>Integrantes</span>
         </a>
 
-        <a [role]="['admin']" mat-list-item [routerLink]="['/report/graduation']" routerLinkActive="active">
+        <a [role]="['admin']" mat-list-item (click)="closeSidenavAndNavigate('/report/graduation')" routerLinkActive="active">
           <mat-icon matListItemIcon>school</mat-icon>
           <span matListItemTitle>Relatório de Graduação</span>
         </a>
 
-        <a mat-list-item [routerLink]="['/auth/login']">
+        <a mat-list-item (click)="closeSidenavAndNavigate('/auth/login')">
           <mat-icon matListItemIcon>exit_to_app</mat-icon>
           <span matListItemTitle>Sair</span>
         </a>
