--- a/src/app/features/auth/password-reset-request/password-reset-request.component.html
+++ b/src/app/features/auth/password-reset-request/password-reset-request.component.html
@@ -1,9 +1,8 @@
 <div class="container login-container" fxLayout="row" fxLayoutAlign="center center">
     <form [formGroup]="form" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
         <mat-card>
-            <img src="assets/favicon/android-icon-192x192.png"
+            <img src="assets/favicon/login.png" alt="18 Admin"
                 style="margin-left: auto; margin-right: auto; display: block; margin-bottom: 5%" />
-            <mat-card-title style="display: flex; justify-content: center; align-items: center">18 Admin</mat-card-title>
             <mat-card-subtitle>Redefinir senha</mat-card-subtitle>
             <mat-card-content>
 
