--- a/src/app/features/auth/password-reset/password-reset.component.html
+++ b/src/app/features/auth/password-reset/password-reset.component.html
@@ -6,7 +6,7 @@
       <mat-card-content>
         <mat-form-field class="full-width">
           <input id="passwordInput" matInput placeholder="Nova senha" formControlName="newPassword"
-            [type]="hideNewPassword ? 'password' : 'text'" autocomplete="new-password" [(ngModel)]="newPassword">
+            [type]="hideNewPassword ? 'password' : 'text'" autocomplete="new-password">
           <mat-icon id="togglePasswordVisibility" matSuffix (click)="hideNewPassword = !hideNewPassword">
             {{hideNewPassword ? 'visibility' : 'visibility_off'}}
           </mat-icon>
@@ -25,7 +25,7 @@
         <mat-form-field class="full-width">
           <input id="passwordConfirmInput" matInput placeholder="Confirmação nova senha"
             formControlName="newPasswordConfirm" [type]="hideNewPasswordConfirm ? 'password' : 'text'"
-            autocomplete="new-password" [(ngModel)]="newPasswordConfirm">
+            autocomplete="new-password">
           <mat-icon id="togglePasswordConfirmVisibility" matSuffix
             (click)="hideNewPasswordConfirm = !hideNewPasswordConfirm">
             {{hideNewPasswordConfirm ? 'visibility' : 'visibility_off'}}
