Redução do margin-top dos títulos das listas

--- a/src/app/features/division/division-list/division-list.component.html
+++ b/src/app/features/division/division-list/division-list.component.html
@@ -2,7 +2,7 @@
   <div fxFlex="95%">
     <mat-card>
       <mat-card-content>
-        <h2>
+        <h2 style="margin-top: 0;">
           Divisões
           <button mat-mini-fab color="primary" routerLink="register" style="margin-left: 5px">
             <mat-icon>add</mat-icon>
