--- a/src/app/features/users/user-list/user-list.component.html
+++ b/src/app/features/users/user-list/user-list.component.html
@@ -15,6 +15,11 @@
             <td class="ellipsis" mat-cell *matCellDef="let element">{{ element.email }}</td>
           </ng-container>
 
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+            <td class="ellipsis" mat-cell *matCellDef="let element">{{ element.name }}</td>
+          </ng-container>
+
           <ng-container matColumnDef="active">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Situação</th>
             <td mat-cell *matCellDef="let element">{{ element.isActive ? 'Ativo' : 'Inativo' }}</td>
