Indicador de filtro na página de listas

--- a/src/app/features/social-action/social-action-list/social-action-list.component.html
+++ b/src/app/features/social-action/social-action-list/social-action-list.component.html
@@ -12,6 +12,11 @@
           </button>
         </h2>
 
+        <mat-card-title>
+          <mat-icon>filter_list</mat-icon>
+          Filtros
+        </mat-card-title>
+
         <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px">
           <mat-form-field [fxFlex]="33">
             <mat-select
