--- a/src/app/features/regional/regional-list/regional-list.component.html
+++ b/src/app/features/regional/regional-list/regional-list.component.html
@@ -8,16 +8,22 @@
             <mat-icon>add</mat-icon>
           </button>
         </h2>
-        <div class="container" fxLayout="row" fxLayoutAlign="center none">
+
+        <mat-card-title>
+          <mat-icon>filter_list</mat-icon>
+          Filtros
+        </mat-card-title>
+
+        <div fxLayout="row" fxLayoutAlign="center none">
           <div fxFlex="100%">
-          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-              <mat-form-field [fxFlex]="33">
-                  <mat-label>Comando</mat-label>
-                  <mat-select [(ngModel)]="selectedCommandId" (selectionChange)="getRegionals()">
-                    <mat-option *ngFor="let command of commands" [value]="command.id">{{ command.name }}</mat-option>
-                  </mat-select>
-              </mat-form-field>
-            </div>
+            <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+                <mat-form-field [fxFlex]="33">
+                    <mat-label>Comando</mat-label>
+                    <mat-select [(ngModel)]="selectedCommandId" (selectionChange)="getRegionals()">
+                      <mat-option *ngFor="let command of commands" [value]="command.id">{{ command.name }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+              </div>
           </div>
         </div>
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="getRegionals()">
