--- a/src/app/features/report/graduation-report/graduation-report.component.html
+++ b/src/app/features/report/graduation-report/graduation-report.component.html
@@ -3,6 +3,7 @@
 
     <mat-card class="filter-card">
       <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px" class="header-section">
+        <mat-icon class="header-icon" color="primary">school</mat-icon>
         <h2 class="page-title">Relatório de Graduação</h2>
       </div>
       <mat-card-header>
