--- a/src/app/features/social-action/social-action-list/social-action-list.component.html
+++ b/src/app/features/social-action/social-action-list/social-action-list.component.html
@@ -2,15 +2,16 @@
   <div fxFlex="95%">
     <mat-card>
       <mat-card-content>
-        <h2 style="margin-top: 0;">
-          Ações Sociais
-          <button mat-mini-fab color="primary" routerLink="register" style="margin-left: 5px">
+        <div fxLayout="row" fxLayoutAlign="start center" style="align-items: center; gap: 12px;">
+          <mat-icon class="header-icon" color="primary">diversity_3</mat-icon>
+          <h2 style="margin: 0">Ações Sociais</h2>
+          <button mat-mini-fab color="primary" routerLink="register">
             <mat-icon>add</mat-icon>
           </button>
           <button mat-mini-fab color="primary" [routerLink]="['/dashboard']" style="margin-left: 5px">
             <mat-icon>leaderboard</mat-icon>
           </button>
-        </h2>
+        </div>
 
         <mat-card-title>
           <mat-icon>filter_list</mat-icon>
