--- a/src/app/features/users/user-list/user-list.component.html
+++ b/src/app/features/users/user-list/user-list.component.html
@@ -2,12 +2,13 @@
   <div fxFlex="95%">
     <mat-card>
       <mat-card-content>
-        <h2 style="margin-top: 0;">
-          Usuários
-          <button mat-mini-fab color="primary" routerLink="register" style="margin-left: 5px">
+        <div fxLayout="row" fxLayoutAlign="start center" style="align-items: center; gap: 12px;">
+          <mat-icon class="header-icon" color="primary">group</mat-icon>
+          <h2 style="margin: 0">Usuários</h2>
+          <button mat-mini-fab color="primary" routerLink="register">
             <mat-icon>add</mat-icon>
           </button>
-        </h2>
+        </div>
 
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="getUsers()">
           <ng-container matColumnDef="email">
