--- a/src/app/features/poll/poll-registration/poll-registration.component.html
+++ b/src/app/features/poll/poll-registration/poll-registration.component.html
@@ -49,6 +49,7 @@
                   {{ command.name }}
                 </mat-option>
               </mat-select>
+              <mat-error *ngIf="formGroup.controls['commandId'].invalid">Campo obrigatório</mat-error>
             </mat-form-field>
           </div>
 
