--- a/src/app/features/event/event-registration/event-registration.component.html
+++ b/src/app/features/event/event-registration/event-registration.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar>
+  <button mat-mini-fab color="primary" style="margin-right: 12px;" (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
   {{ event.id == null ? "Cadastrar Evento" : "Editar Evento" }}
 </mat-toolbar>
 
