--- a/src/app/features/social-action/social-action-registration/social-action-registration.component.html
+++ b/src/app/features/social-action/social-action-registration/social-action-registration.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar>
+  <button mat-mini-fab color="primary" style="margin-right: 12px;" (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
   {{ socialAction.id == null ? "Cadastrar Ação Social" : "Editar Ação Social" }}
 </mat-toolbar>
 
