Imagem mat-toolbar na pasta images

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -6,7 +6,7 @@
     </button>
 
     <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
-      <img src="assets/mat-toolbar.png" alt="18 Admin" class="toolbar-logo">
+      <img src="assets/images/mat-toolbar.png" alt="18 Admin" class="toolbar-logo">
     </a>
 
     <span class="navbar-spacer"></span>
