Estilos unificados em styles.css

--- a/src/app/features/auth/password-reset-request/password-reset-request.component.html
+++ b/src/app/features/auth/password-reset-request/password-reset-request.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="form" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
         <mat-card>
             <img src="assets/favicon/login.png" alt="18 Admin"
-                style="margin-left: auto; margin-right: auto; display: block; margin-bottom: 5%" />
+                class="center-block mb-5pct" />
             <mat-card-subtitle>Redefinir senha</mat-card-subtitle>
             <mat-card-content>
 
