--- a/src/app/features/classes/class-list/class-list.component.html
+++ b/src/app/features/classes/class-list/class-list.component.html
@@ -4,7 +4,7 @@
       <mat-card-content>
         <h2>
           Modalidades
-          <button mat-mini-fab color="primary" routerLink="register" style="margin-left: 5px">
+          <button mat-mini-fab color="primary" routerLink="register" class="btn-add">
             <mat-icon>add</mat-icon>
           </button>
         </h2>
