--- a/src/app/features/division/division-registration/division-registration.component.html
+++ b/src/app/features/division/division-registration/division-registration.component.html
@@ -44,7 +44,7 @@
         </mat-form-field>
       </div>
 
-      <div style="margin-top: 15px; margin-bottom: 15px">
+      <div class="mt-15 mb-15">
         <button mat-flat-button color="primary">
           <mat-icon>save</mat-icon>
           Salvar
