--- a/src/app/features/person/person-late-payment-dialog/person-late-payment-dialog.component.html
+++ b/src/app/features/person/person-late-payment-dialog/person-late-payment-dialog.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between center">
-  <h3 style="margin: 0;">Atraso de Mensalidade</h3>
+  <h3 class="title-no-margin">Atraso de Mensalidade</h3>
   <button mat-mini-fab color="primary" (click)="close()" matTooltip="Fechar">
     <mat-icon>close</mat-icon>
   </button>
