--- a/src/app/features/users/user-registration/user-registration.component.html
+++ b/src/app/features/users/user-registration/user-registration.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <button mat-mini-fab color="primary" style="margin-right: 12px;" (click)="goBack()">
+    <button mat-mini-fab color="primary" class="btn-back" (click)="goBack()">
         <mat-icon>arrow_back</mat-icon>
     </button>
     {{ !isEditMode ? "Cadastrar Usuário" : "Editar Usuário" }}
