--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="loginForm" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
     <mat-card>
       <img src="assets/favicon/login.png" alt="18 Admin"
-        style="margin-left: auto; margin-right: auto; margin-top: 5%; display: block; margin-bottom: 5%" />
+        class="center-block mb-5pct" style="margin-top: 5%;" />
       <mat-card-content>
         <mat-form-field class="full-width">
           <input id="emailInput" matInput placeholder="Email" formControlName="email" autocomplete="email"
