--- a/src/app/features/event/event-list/event-list.component.html
+++ b/src/app/features/event/event-list/event-list.component.html
@@ -2,9 +2,9 @@
   <div fxFlex="95%">
     <mat-card>
       <mat-card-content>
-        <div fxLayout="row" fxLayoutAlign="start center" style="align-items: center; gap: 12px;">
+        <div fxLayout="row" fxLayoutAlign="start center" class="flex-title-row">
           <mat-icon class="header-icon" color="primary">event</mat-icon>
-          <h2 style="margin: 0">Eventos</h2>
+          <h2 class="title-no-margin">Eventos</h2>
           <button mat-mini-fab color="primary" routerLink="register">
             <mat-icon>add</mat-icon>
           </button>
