--- a/src/app/features/person/person-registration/person-registration.component.html
+++ b/src/app/features/person/person-registration/person-registration.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <button mat-mini-fab color="primary" style="margin-right: 12px;" (click)="goBack()">
+  <button mat-mini-fab color="primary" class="btn-back" (click)="goBack()">
     <mat-icon>arrow_back</mat-icon>
   </button>
   {{ person.id == null ? "Cadastrar Integrante" : "Editar Integrante" }}
@@ -93,7 +93,7 @@
         </mat-form-field>
       </div>
 
-      <div style="margin-top: 15px; margin-bottom: 15px">
+      <div class="mt-15 mb-15">
         <button mat-flat-button color="primary">
           <mat-icon>save</mat-icon>
           Salvar
