--- a/src/app/features/social-action/social-action-list/social-action-list.component.html
+++ b/src/app/features/social-action/social-action-list/social-action-list.component.html
@@ -2,13 +2,13 @@
   <div fxFlex="95%">
     <mat-card>
       <mat-card-content>
-        <div fxLayout="row" fxLayoutAlign="start center" style="align-items: center; gap: 12px;">
+        <div fxLayout="row" fxLayoutAlign="start center" class="flex-title-row">
           <mat-icon class="header-icon" color="primary">diversity_3</mat-icon>
-          <h2 style="margin: 0">Ações Sociais</h2>
+          <h2 class="title-no-margin">Ações Sociais</h2>
           <button mat-mini-fab color="primary" routerLink="register">
             <mat-icon>add</mat-icon>
           </button>
-          <button mat-mini-fab color="primary" [routerLink]="['/dashboard']" style="margin-left: 5px">
+          <button mat-mini-fab color="primary" [routerLink]="['/dashboard']" class="btn-add">
             <mat-icon>leaderboard</mat-icon>
           </button>
         </div>
