Correção de margin na tela dashboard

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -1,6 +1,6 @@
 <div class="container" fxLayout="row" fxLayoutAlign="center none">
   <div fxFlex="97%">
-    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+    <div class="mb-15" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
       <button mat-mini-fab color="primary" (click)="goBack()" matTooltip="Voltar para lista">
         <mat-icon>arrow_back</mat-icon>
       </button>
